--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,28 +31,30 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # UI
   cupertino_icons: ^1.0.2
 
   # State management
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  get_it: ^7.7.0
 
   # Database
-  sqflite: ^2.3.3+1
+  objectbox: ^4.0.1
+
+  objectbox_flutter_libs: any
   path: ^1.9.0
+  path_provider: ^2.1.3
+  dotenv: ^4.2.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.9
+  objectbox_generator: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,6 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/secure_data/.env
     - assets/images/
     - assets/fonts/comfortaa/
 
@@ -93,3 +96,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+objectbox:
+  output_dir: app/screens/authentication/data/models/generated_files/
